src/test/ui/const-generics/issues/issue-62220.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-62220.rs:8:59
   |
LL | pub type TruncatedVector<T, const N: usize> = Vector<T, { N - 1 }>;
   |                                                           ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`

error: aborting due to previous error

